--- a/main_styles.css
+++ b/main_styles.css
@@ -44,7 +44,7 @@
 
 }
 
-.concise_descr ul,li{
+.concise_descr ul,li,b{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 20px;
     list-style-type: none;
@@ -74,14 +74,26 @@ img{
 #basics{
     width: 40%;
     text-align: center;
+    margin: auto;
 }
 
-#basics > i{
+#basics div{
+    text-align: center;
+    margin: auto;
+}
+#email i{
     font-family: sans-serif;
     font-size: 15px;
     color: red;
 }
 
+#email{
+    width: 100%;
+    margin: auto;
+    text-align: center;
+    padding-left:30px;
+    font-size: 10px;
+}
 
 #meme{
     text-align: center;
@@ -153,14 +165,16 @@ img{
 }
 
 #langs, #frames{
-    width: auto;
+    margin: auto;
+    text-align: center;
+    width: 100%;
 }
 
 
 @media only screen and (max-width: 700px){
 
     .social-media {
-        width: 60%;
+        width: 70%;
     }
 
     a[class="nav-link"], .navbar-custom .nav-link{
@@ -172,13 +186,19 @@ img{
         grid-column-gap: 0px;
 
     }
-
+    #email{
+        display: none;
+        padding:0px;
+        font-size: 13px;
+    }
     #meme > p{
         font-size: 13px;
     }
 
-    #basics li{
+    #basics ul, li, b{
         font-size: 13px;
+        margin: none;
+        padding: none;
     }
 
     .profile{
@@ -189,19 +209,15 @@ img{
         width: auto;
         height: auto;
         margin: 5px;
-        padding: 10px;
+        padding: 5px;
     }
 
     #meme, #basics{
-        width: 70%
+        width: 100%
     }
 
     #profile-img{
         width: 70%;
-    }
-    
-    #basics ul{
-        margin-right: 10px;
     }
 
 }
