--- a/main_styles.css
+++ b/main_styles.css
@@ -152,6 +152,7 @@ img{
     text-decoration: underline;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 20px;
+    padding: 5px;
     color: gray;
 }
 
